// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/rollup.js watch mode should generate updated output 1`] = `
"/* watched.css */
.mcbb1d9d97_one {
    color: red;
}"
`;

exports[`/rollup.js watch mode should generate updated output 2`] = `
"/* watched.css */
.mcbb1d9d97_two {
    color: blue;
}"
`;

exports[`/rollup.js watch mode should generate updated output for composes changes 1`] = `
Array [
  Object {
    "file": "assets\\\\output.css",
    "text": "/* watched.css */
.mcbb1d9d97_one {
    color: red;
}

.mcbb1d9d97_two {
    background: blue;
}

.mcbb1d9d97_three {
    color: teal;
}",
  },
  Object {
    "file": "output.js",
    "text": "var css = {
    \\"one\\": \\"mcbb1d9d97_one\\",
    \\"two\\": \\"mcbb1d9d97_one mcbb1d9d97_two\\",
    \\"three\\": \\"mcbb1d9d97_three\\"
};

console.log(css);
",
  },
  Object {
    "file": "watched.css",
    "text": ".one {
    color: red;
}

.two {
    composes: one;
    background: blue;
}

.three {
    color: teal;
}",
  },
  Object {
    "file": "watched.js",
    "text": "import css from \\"./watched.css\\";
console.log(css);",
  },
]
`;

exports[`/rollup.js watch mode should generate updated output for composes changes 2`] = `
Array [
  Object {
    "file": "assets\\\\output.css",
    "text": "/* watched.css */
.mcbb1d9d97_one {
    color: green;
}

.mcbb1d9d97_two {
    background: blue;
}

.mcbb1d9d97_three {
    color: teal;
}",
  },
  Object {
    "file": "output.js",
    "text": "var css = {
    \\"one\\": \\"mcbb1d9d97_one\\",
    \\"two\\": \\"mcbb1d9d97_one mcbb1d9d97_two\\",
    \\"three\\": \\"mcbb1d9d97_one mcbb1d9d97_three\\"
};

console.log(css);
",
  },
  Object {
    "file": "watched.css",
    "text": ".one {
    color: green;
}

.two {
    composes: one;
    background: blue;
}

.three {
    composes: one;
    color: teal;
}",
  },
  Object {
    "file": "watched.js",
    "text": "import css from \\"./watched.css\\";
console.log(css);",
  },
]
`;

exports[`/rollup.js watch mode should update when a dependency changes 1`] = `
"/* two.css */
.mc53a078c9_two {
    color: blue;
}
/* three.css */
.mcf63c28ef_three {
    color: green;
}
/* one.css */
.mcb1c92159_one {
    color: red;
}"
`;

exports[`/rollup.js watch mode should update when a dependency changes 2`] = `
"/* two.css */
.mc53a078c9_two {
    color: green;
}
/* three.css */
.mcf63c28ef_three {
    color: green;
}
/* one.css */
.mcb1c92159_one {
    color: red;
}"
`;

exports[`/rollup.js watch mode should update when a shared dependency changes 1`] = `
"/* two.css */
.mc53a078c9_two {
    color: green;
}
/* one.css */
.mcb1c92159_one {
    color: red;
}
/* three.css */
.mcf63c28ef_three {
    color: teal;
}"
`;

exports[`/rollup.js watch mode should update when a shared dependency changes 2`] = `
"/* two.css */
.mc53a078c9_two {
    color: yellow;
}
/* one.css */
.mcb1c92159_one {
    color: red;
}
/* three.css */
.mcf63c28ef_three {
    color: teal;
}"
`;

exports[`/rollup.js watch mode should update when adding new css files 1`] = `
"/* one.css */
.mcb1c92159_one {
    color: red;
}"
`;

exports[`/rollup.js watch mode should watch when using code splitting 1`] = `
Array [
  Object {
    "file": "common.css",
    "text": "/* values.css */
/* shared.css */
.mc17f7cc13_shared {
    color: blue;
}",
  },
  Object {
    "file": "one.css",
    "text": "/* one.css */
.mcb1c92159_one {
    color: red;
}",
  },
  Object {
    "file": "two.css",
    "text": "/* two.css */
.mc53a078c9_two {
    color: green;
}",
  },
]
`;

exports[`/rollup.js watch mode should watch when using code splitting 2`] = `
Array [
  Object {
    "file": "common.css",
    "text": "/* one.css */
.mcb1c92159_one {
    color: red;
}
/* two.css */
.mc53a078c9_two {
    color: green;
}
/* shared.css */
.mc17f7cc13_shared {
    color: blue;
}
/* values.css */",
  },
  Object {
    "file": "one.css",
    "text": "/* one.css */
.mcb1c92159_one {
    color: red;
}",
  },
  Object {
    "file": "two.css",
    "text": "/* two.css */
.mc53a078c9_two {
    color: green;
}",
  },
]
`;
